user follow fix
