# docs/swagger.json
@@ -2556,6 +2556,14 @@
                     "users"
                 ],
                 "summary": "Liste des followers",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id of user search (not required)",
+                        "name": "userSearch",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "List of followers",
@@ -2605,6 +2613,14 @@
                     "users"
                 ],
                 "summary": "List of users followed",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id of user search (not required)",
+                        "name": "userSearch",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "List of users followed",
@@ -3357,6 +3373,80 @@
                     },
                     "500": {
                         "description": "error: Server error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/users/{username}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Find user by userName",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Find user by userName",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "search userName",
+                        "name": "username",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "User is found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "400": {
+                        "description": "error: Invalid request data",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "error: Unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "error: User not found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "error: Error retrieving profile",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
